--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "react-scripts": "3.4.1",
     "semantic-ui-react": "^0.88.2",
     "serialize-javascript": "^4.0.0",
+    "serve": "^11.3.2",
     "websocket-extensions": "0.1.4"
   },
   "scripts": {
     "dev": "react-scripts start",
-    "start": "node index.js",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
